--- a/.github/workflows/detok.yml
+++ b/.github/workflows/detok.yml
@@ -28,4 +28,6 @@ jobs:
           git config --local user.name "GitHub Action"
           git add .
           git commit -m "Run detok and commit changes" || echo "No changes to commit"
-          git push
+          git push origin HEAD:main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
